--- a/xypai-visual/xypai-monitor/src/main/resources/bootstrap.yml
+++ b/xypai-visual/xypai-monitor/src/main/resources/bootstrap.yml
@@ -15,11 +15,19 @@ spring:
       discovery:
         # 服务注册地址
         server-addr: 127.0.0.1:8848
+        # 用户名
+        username: nacos
+        # 密码
+        password: nacos
       config:
         # 配置中心地址
         server-addr: 127.0.0.1:8848
         # 配置文件格式
         file-extension: yml
+        # 用户名
+        username: nacos
+        # 密码
+        password: nacos
         # 共享配置
         shared-configs:
           - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
