--- a/xypai-auth/pom.xml
+++ b/xypai-auth/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>xypai-common-security</artifactId>
         </dependency>
 
+        <!-- RuoYi Common Swagger-->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-swagger</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
