--- a/xypai-common/xypai-common-swagger/pom.xml
+++ b/xypai-common/xypai-common-swagger/pom.xml
@@ -23,7 +23,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- SpringDoc webmvc -->
+        <!-- Knife4j OpenAPI3 Jakarta -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- SpringDoc webmvc (保持兼容) -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
