--- a/xypai-auth/xypai-auth-app-auth/src/main/resources/bootstrap.yml
+++ b/xypai-auth/xypai-auth-app-auth/src/main/resources/bootstrap.yml
@@ -10,6 +10,24 @@ spring:
   profiles:
     # 环境配置
     active: dev
+  # Redis配置
+  data:
+    redis:
+      host: ${REDIS_HOST:127.0.0.1}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:}
+      database: ${REDIS_DATABASE:0}
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池最大连接数
+          max-active: 200
+          # 连接池最大阻塞等待时间
+          max-wait: -1ms
+          # 连接池中的最大空闲连接
+          max-idle: 10
+          # 连接池中的最小空闲连接
+          min-idle: 0
   cloud:
     nacos:
       discovery:
