--- a/xypai-modules/xypai-user/pom.xml
+++ b/xypai-modules/xypai-user/pom.xml
@@ -2,27 +2,20 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.xypai</groupId>
-        <artifactId>xypai-auth</artifactId>
+        <artifactId>xypai-modules</artifactId>
         <version>3.6.6</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xypai-auth-app-auth</artifactId>
+    <artifactId>xypai-modules-user</artifactId>
 
     <description>
-        APP认证服务 - 专为移动端提供的认证功能
+        xypai-modules-user用户中心模块
     </description>
 
     <dependencies>
-        <!-- 依赖公共模块 -->
-        <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-auth-common</artifactId>
-        </dependency>
 
         <!-- SpringCloud Alibaba Nacos -->
         <dependency>
@@ -42,47 +35,98 @@
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
         </dependency>
 
-        <!-- SpringBoot Web -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
         <!-- SpringBoot Actuator -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- XYPai Common Security-->
+        <!-- SpringBoot Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- SpringBoot Validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- MyBatis Plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+
+        <!-- Mysql Connector -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+
+        <!-- XyPai Common Core -->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-core</artifactId>
+        </dependency>
+
+        <!-- XyPai Common DataSource -->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-datasource</artifactId>
+        </dependency>
+
+        <!-- XyPai Common Security -->
         <dependency>
             <groupId>com.xypai</groupId>
             <artifactId>xypai-common-security</artifactId>
         </dependency>
 
-        <!-- XYPai Common Swagger-->
+        <!-- XyPai Common Log -->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-log</artifactId>
+        </dependency>
+
+        <!-- XyPai Common Swagger -->
         <dependency>
             <groupId>com.xypai</groupId>
             <artifactId>xypai-common-swagger</artifactId>
         </dependency>
 
-        <!-- XYPai Common Redis -->
+        <!-- XyPai Common Redis -->
         <dependency>
             <groupId>com.xypai</groupId>
             <artifactId>xypai-common-redis</artifactId>
         </dependency>
 
-        <!-- Knife4j SpringDoc OpenAPI -->
+        <!-- XyPai Common Sensitive -->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-sensitive</artifactId>
+        </dependency>
+
+        <!-- XyPai System API -->
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-api-system</artifactId>
+        </dependency>
+
+        <!-- Knife4j OpenAPI3 -->
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
-            <version>${knife4j.version}</version>
         </dependency>
+
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -101,4 +145,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
