--- a/xypai-modules/xypai-user/pom.xml
+++ b/xypai-modules/xypai-user/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xypai-modules-user</artifactId>
+    <artifactId>user</artifactId>
 
     <description>
-        xypai-modules-user用户中心模块
+        user用户中心模块
     </description>
 
     <dependencies>
