--- a/xypai-modules/pom.xml
+++ b/xypai-modules/pom.xml
@@ -13,6 +13,10 @@
         <module>xypai-gen</module>
         <module>xypai-job</module>
         <module>xypai-file</module>
+        <module>xypai-user</module>
+        <module>xypai-content</module>
+        <module>xypai-trade</module>
+        <module>xypai-chat</module>
     </modules>
 
     <artifactId>xypai-modules</artifactId>
