--- a/xypai-modules/pom.xml
+++ b/xypai-modules/pom.xml
@@ -9,14 +9,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <modules>
-        <module>xypai-system</module>
-        <module>xypai-gen</module>
-        <module>xypai-job</module>
-        <module>xypai-file</module>
         <module>xypai-user</module>
         <module>xypai-content</module>
         <module>xypai-trade</module>
         <module>xypai-chat</module>
+        <module>xypai-system</module>
+        <module>xypai-gen</module>
+        <module>xypai-job</module>
+        <module>xypai-file</module>
+        <module>../xypai-security/security-oauth</module>
     </modules>
 
     <artifactId>xypai-modules</artifactId>
