--- a/xypai-security/security-oauth/pom.xml
+++ b/xypai-security/security-oauth/pom.xml
@@ -7,21 +7,37 @@
 
     <parent>
         <groupId>com.xypai</groupId>
-        <artifactId>xypai-security</artifactId>
+        <artifactId>xypai-modules</artifactId>
         <version>3.6.6</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../xypai-modules/pom.xml</relativePath>
     </parent>
 
-    <!-- 🛡️ 安全认证：OAuth2核心 -->
-    <artifactId>security-oauth</artifactId>
-    <name>security-oauth</name>
-    <description>XV02:02 OAuth2认证核心服务</description>
+    <!-- 🛡️ C端认证微服务 -->
+    <artifactId>xypai-auth</artifactId>
+    <name>xypai-auth</name>
+    <description>XY相遇派C端认证微服务</description>
 
     <dependencies>
-        <!-- 🔗 安全接口模块 -->
+        <!-- 🔧 相遇派通用依赖 -->
         <dependency>
             <groupId>com.xypai</groupId>
-            <artifactId>security-interface</artifactId>
+            <artifactId>xypai-common-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-log</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.xypai</groupId>
+            <artifactId>xypai-common-swagger</artifactId>
         </dependency>
 
         <!-- 🌐 Spring Boot Web -->
@@ -55,30 +71,10 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- 💾 Database -->
+        <!-- 💾 Redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-        </dependency>
-
-        <!-- 🗄️ Redis 缓存 -->
-        <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-common-redis</artifactId>
-        </dependency>
-
-        <!-- 🔧 相遇派通用依赖 -->
-        <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-common-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-common-security</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <!-- 🌐 服务发现 -->
@@ -91,22 +87,38 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
 
+        <!-- 🔗 Feign 客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
+        <!-- ✅ 验证框架 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- 🔧 Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!-- 📖 API文档 - 使用通用swagger配置 -->
+        <!-- 🧪 测试依赖 -->
         <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-common-swagger</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
-
-        <!-- 🗄️ Redis缓存服务 -->
         <dependency>
-            <groupId>com.xypai</groupId>
-            <artifactId>xypai-common-redis</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
